fix: #1105 fixed align styles to tags, skills

--- a/mw-webapp/src/component/modal/ModalContent/ModalContent.module.scss
+++ b/mw-webapp/src/component/modal/ModalContent/ModalContent.module.scss
@@ -7,7 +7,6 @@ $modal-close-btn-top: 10px;
 $modal-close-btn-right: 10px;
 $modal-close-btn-size: 25px;
 $modal-animation-time: 150ms;
-$modal-max-width: 640px;
 
 .dialogOverlay {
   position: fixed;
@@ -23,8 +22,7 @@ $modal-max-width: 640px;
   top: 50%;
   left: 50%;
   overflow: auto;
-  width: 90%;
-  max-width: $modal-max-width;
+  max-width: 95vw;
   max-height: 90vh;
   padding: $paddingExtraBig;
   border: 2px solid var(--generalPrimaryColor);
