--- a/mw-webapp/src/component/modal/PromptModalContent.module.scss
+++ b/mw-webapp/src/component/modal/PromptModalContent.module.scss
@@ -10,8 +10,3 @@
   flex-direction: column;
   gap: $gapBig;
 }
-
-.cancelButton {
-  border-color: var(--generalPrimaryColor);
-  color: var(--generalPrimaryColor);
-}
